@@ -15,7 +15,7 @@ my $builder = Module::Build->new(
         'Clone'                  => 0,
         'DBI'                    => 0,
         'SQL::Abstract::Classic' => 1.91,
-        'SQL::Abstract::More'    => 1.40,
+        'SQL::Abstract::More'    => 1.41,
         'Module::Build'          => 0,
         'Data::Structure::Util'  => 0,
         'Hash::Util'             => 0,
